--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,9 @@
+@import 'leaflet/dist/leaflet.css';
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+    background-color: #F0F0F5;
+    font-family: 'Inter', sans-serif;
+}   
